# ai-inference-backend

./: CMakeLists.txt  README.md
configs/: main.cfg
include/: globalvars.h
include/AITools/: OnnxRuntime.h  utilities.h
include/AiToolsGpu/: TensorRT_Yolo.h
include/ByteTrack/: OutputsDecoder.h  STrack.h
include/HttpServer/: Protocol.h  WebSocketServer.h
include/HttpServer/handlers/: Index.h  PostRequestHandler.h
include/OtherTools/: ConfigReader.h  ObjectsPainter.h
src/: main.cpp
src/AITools/: OnnxRuntime.cpp  utilities.cpp
src/AIToolsGpu/: TensorRT_Yolo.cpp
src/ByteTrack/: BYTETracker.cpp  OutputsDecoder.cpp  STrack.cpp
src/HttpServer/: WebSocketServer.cpp
src/HttpServer/handlers/: Factory.cpp  Index.cpp  PostRequestHandler.cpp
src/OtherTools/: ConfigReader.cpp  ObjectsPainter.cpp
